# python-orders-collector-bot

./: .env  Dockerfile  Pipfile  Procfile  README.md  app.py  bot.py  config.py  dataframe.py  fix-poetry-problem.sh  ggapi_key.json  pyproject.toml  requirements.txt  run.py  start.sh  utils.py
assets/csv/: kiem_kho_2020-08-28.csv  kiem_kho_2020-08-30.csv  kiem_kho_2020-10-10.csv
assets/test/: test_2020-10-10.csv
